Re #2 #1  start work on more covariates

--- a/covariate_model/Makefile
+++ b/covariate_model/Makefile
@@ -1,4 +1,5 @@
 
+build: pb-data.csv hb-data.tsv firefox.json reformat
 
 remote:
 	scp -i ~/.ssh/id_rsa.pub covariates.sql sumotools1.webapp.phx1.mozilla.com:~/hb-covariates
@@ -8,21 +9,26 @@ remote:
 	ssh sumotools1.webapp.phx1.mozilla.com -i ~/.ssh/id_rsa.pub "cd ~/hb-covariates; mysql --login-path=input --batch -D input_mozilla_org_new < covariates.sql > hb-data.tsv; gzip -f hb-data.tsv"
 
 
-hb:
+firefox.json:
+	curl "https://product-details.mozilla.org/firefox.json" > firefox.json
+
+# hb-data
+hb-data.tsv:
 	scp -i ~/.ssh/id_rsa.pub sumotools1.webapp.phx1.mozilla.com:~/hb-covariates/hb-data.tsv.gz .
 	gunzip hb-data.tsv.gz
 
 
-surveys:
+# surveys
+pb-data.csv:
 	curl "http://app.surveygizmo.com/reportsview/?key=28049-5305096-77ff479273501cbf114a9d7b6ba25431&print=true" > pb-data.csv
 
 
 reformat:
-	python reformat.py pb-data.csv hb-data.tsv > hb-with-covariates.csv
+	python reformat.py pb-data.csv hb-data.tsv firefox.json > hb-with-covariates.csv
 
+.PHONY: clean
 clean:
-	rm -f hb-data.tsv pb-data.csv hb-with-covariates.csv
+	rm -f hb-data.tsv pb-data.csv hb-with-covariates.csv firefox.json
 
 
-build: clean surveys hb reformat
 
